# Pulse-Engine

./: CMakeLists.txt  LICENSE.txt  README.md  main.cpp
EngineCore/: app.cpp  app.h  logginer.cpp  logginer.h  main_loop.cpp  main_loop.h  time.cpp  time.h
core/: app.cpp  app.h  logger.cpp  main_loop.cpp  main_loop.h
log/: logs.cpp  logs.h
main/: main.cpp  main.h
system/: SystemInfo.cpp  SystemInfo.h
